# debate-cli

./: .gitignore  CLAUDE.md  README.md  debate-system.html  debate.py  prompts.toml  pyproject.toml  requirements.txt
data/: MERMAID-UC-DIAGRAM-SPEC.md
src/debate_cli/: __init__.py  __main__.py  bootstrap.py  cli.py
src/debate_cli/application/: __init__.py  contracts.py  debate_service.py  parsing.py  preflight.py  reporting.py
src/debate_cli/domain/: __init__.py  models.py
src/debate_cli/infrastructure/: __init__.py  agents.py  context.py  pdf_report.py  prompts.py  renderers.py  reports.py
src/debate_cli/resources/: default_prompts.toml  report_template.html
tests/: test_debate.py
