[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "debate-cli"
version = "0.1.0"
description = "Steel man debates between Claude Code and Codex, moderated by Gemini."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
rich = [
  "rich>=13.0",
]
pdf = [
  "weasyprint>=60.0",
  "jinja2>=3.1",
]
all = [
  "rich>=13.0",
  "weasyprint>=60.0",
  "jinja2>=3.1",
]

[project.scripts]
debate-cli = "debate_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"debate_cli.resources" = ["*.toml", "*.html"]
